--- a/index.html
+++ b/index.html
@@ -56,124 +56,107 @@
 <!-- 🔽 PASTE YOUR PORTFOLIO CONTENT BELOW 🔽 -->
 
 <section>
-  <h2>Guiding Principles and Initial Content Development
+  <h2>Spiritual Progression Portfolio</h2>
 
-Spiritual Progression Portfolio
+  <h3>Guiding Principles</h3>
+  <p>
+    The following three guiding principles form the foundation of my spiritual
+    and professional portfolios. These principles guide my decisions, learning,
+    and behavior as I grow spiritually and prepare for a career in information technology.
+  </p>
 
-Guiding Principles
-The following three guiding principles form the foundation of my spiritual and professional portfolios. These principles guide my decisions, learning, and behavior as I grow spiritually and prepare for a career in information technology.
+  <h3>Guiding Principle 1: Faith as an Anchor for Consistent Growth</h3>
+  <p>
+    Faith provides stability, direction, and hope during periods of effort and uncertainty.
+    Ether 12:4 teaches that faith produces hope that acts as an anchor to the soul,
+    allowing individuals to remain sure and steadfast while continuing in good works.
+  </p>
+  <p>
+    This principle applies spiritually by encouraging steady discipleship and trust
+    in the Lord’s timing. Professionally, it supports patience and persistence while
+    developing technical skills.
+  </p>
+  <ul>
+    <li>Ether 12:4</li>
+    <li>Russell M. Nelson, <em>Make Time for the Lord</em></li>
+    <li>3 Nephi 13:19–22</li>
+  </ul>
 
-Guiding Principle 1: Faith as an Anchor for Consistent Growth
-Faith provides stability, direction, and hope during periods of effort and uncertainty. Ether 12:4 teaches that faith produces hope that acts as an anchor to the soul, allowing individuals to remain “sure and steadfast” while continuing in good works. This principle emphasizes consistency rather than short-term results.
-This guiding principle applies spiritually by encouraging steady discipleship and trust in the Lord’s timing. Professionally, it supports patience and persistence while developing technical skills. Learning IT concepts, troubleshooting systems, and gaining experience often require sustained effort before visible results appear. Faith-centered consistency helps maintain motivation and focus during this process.
-Aligned Materials:
-•	Ether 12:4
-•	Russell M. Nelson, Make Time for the Lord
-•	3 Nephi 13:19-22
+  <h3>Guiding Principle 2: Humility and Accountability Lead to Strength</h3>
+  <p>
+    Ether 12:27 teaches that weakness is given so individuals may become humble and
+    that weakness can become strength through faith and grace.
+  </p>
+  <ul>
+    <li>Ether 12:27</li>
+    <li>Mosiah 4:29–30</li>
+    <li>Camille N. Johnson, <em>Invite Christ to Author Your Story</em></li>
+  </ul>
 
-Guiding Principle 2: Humility and Accountability Lead to Strength
-Humility allows growth to occur by acknowledging limitations and relying on correct principles. Ether 12:27 teaches that weakness is given so individuals may become humble and that weakness can become strength through faith and grace. This principle reframes mistakes and limitations as opportunities for refinement.
-Spiritually, this principle encourages repentance, learning, and reliance on the Savior. Professionally, humility is essential in IT roles where errors can occur and continuous learning is required. Accountability, self-review, and willingness to improve support ethical behavior and long-term competence.
-Aligned Materials:
-•	Ether 12:27
-•	Mosiah 4:29-30
-•	Camille N. Johnson, Invite Christ to Author Your Story
+  <h3>Guiding Principle 3: Agency and Diligent Action Create Meaningful Outcomes</h3>
+  <p>
+    Doctrine and Covenants 58:27–28 teaches the importance of acting willingly in good causes.
+  </p>
+  <ul>
+    <li>Doctrine and Covenants 58:27–28</li>
+    <li>Mosiah 4:29–30</li>
+    <li>David A. Bednar, <em>Gather Together in One All Things in Christ</em></li>
+  </ul>
 
-Guiding Principle 3: Agency and Diligent Action Create Meaningful Outcomes
-Agency requires deliberate action aligned with correct values. Doctrine and Covenants 58:27-28 teaches that individuals should be “anxiously engaged in a good cause” and act of their own free will. Growth occurs when responsibility is accepted rather than avoided.
-Spiritually, this principle reinforces obedience and intentional discipleship. Professionally, it supports ethical initiative, responsibility, and stewardship. In system administration, trusted access and authority require proactive responsibility, disciplined decision-making, and respect for organizational policies.
-Aligned Materials:
-•	Doctrine and Covenants 58:27-28
-•	Mosiah 4:29-30
-•	David A. Bednar, Gather Together in One All Things in Christ
+  <h2>Professional Growth Portfolio</h2>
 
+  <h3>Portfolio Introduction</h3>
+  <p>
+    I am an Information Technology student with a strong interest in system administration,
+    technical support, and ethical responsibility.
+  </p>
 
+  <h3>Résumé (Draft)</h3>
+  <p><strong>Pedro Barriga Nicholls</strong><br>
+     Las Vegas, NV | Bilingual: English & Spanish
+  </p>
 
+  <h4>Education</h4>
+  <ul>
+    <li>Bachelor’s in Information Technology (In Progress) – BYU Pathway Worldwide</li>
+    <li>Technical Support Engineer Certificate – Ensign College</li>
+    <li>Computer Support Certification – BYU–Idaho</li>
+    <li>PathwayConnect Certificate – BYU Pathway Worldwide</li>
+  </ul>
 
+  <h4>Experience</h4>
+  <p><strong>Legal Assistant – R.D. Johnson Law Offices, LLC</strong> (Jan 2024 – Present)</p>
+  <ul>
+    <li>Manage legal files and client communications</li>
+    <li>Provide Spanish–English translation during consultations</li>
+    <li>Maintain confidentiality of sensitive information</li>
+  </ul>
 
+  <h4>Skills & Certifications</h4>
+  <ul>
+    <li>System Administration (Foundational)</li>
+    <li>Technical Support & Troubleshooting</li>
+    <li>Cardano Academy Certified – Blockchain Enthusiast (2025)</li>
+  </ul>
 
+  <h2>Ethical Dilemma Analysis</h2>
+  <p>
+    A common ethical dilemma in system administration involves the misuse of administrative privileges…
+  </p>
 
-Professional Growth Portfolio
-Portfolio Introduction
-I am an Information Technology student with a strong interest in system administration, technical support, and ethical responsibility. My academic and professional experiences have helped me develop problem-solving skills, attention to detail, and a commitment to responsible system management. I seek to apply both technical knowledge and strong ethical principles in environments that value trust, accountability, and continuous improvement.
-My faith influences how I approach learning, work, and responsibility. Principles such as diligence, honesty, stewardship, and accountability guide how I interact with systems, data, and people. This portfolio reflects my technical development alongside the values that shape my professional conduct.
+  <h2>Reflective Activity</h2>
+  <p>
+    Taking time for focused spiritual reflection provides clarity, peace, and perspective…
+  </p>
 
-Résumé (Draft)
-Pedro Barriga Nicholls
-Las Vegas, NV
-Bilingual: English & Spanish
-Education
-Bachelor’s in Information Technology (In Progress) - BYU Pathway Worldwide
-Technical Support Engineer Certificate - Ensign College
-•	Configured and secured networks and workstations
-•	Diagnosed hardware and network issues
-•	Developed structured troubleshooting strategies
-Computer Support Certification - BYU–Idaho
-PathwayConnect Certificate – BYU Pathway Worldwide
-•	Leadership, time management, communication, and decision-making
-Experience
-Legal Assistant - R.D. Johnson Law Offices, LLC
-Las Vegas, NV | Jan 2024 - Present
-•	Manage legal files and client communications
-•	Provide Spanish-English translation during consultations
-•	Maintain confidentiality and accuracy of sensitive information
-Cook & Dishwasher - Timberline Restaurant
-Beaver, UT | Aug 2021 - Dec 2023
-•	Maintained sanitation standards and quality control
-•	Trained new employees and supported team operations
-Oxy-Fuel Cutting Torch Operator - Sujar Ltda.
-Santiago, Chile | Mar 2020 - Aug 2020
-•	Operated industrial equipment safely and efficiently
-•	Supported high-output recycling operations
-Full-Time Missionary - The Church of Jesus Christ of Latter-day Saints
-Concepción, Chile | Dec 2017 - Dec 2019
-•	Taught, trained peers, and developed strong communication skills
-Skills & Certifications
-•	System Administration (Foundational)
-•	Technical Support & Troubleshooting
-•	Cardano Academy Certified - Blockchain Enthusiast (2025)
-•	Team Collaboration | Detail-Oriented | Fast Learner
-
-
-
-
-
-
-
-
-
-Project Descriptions
-
-Project 1: System Administration Coursework
-This project includes hands-on labs focused on managing user accounts, permissions, and system configurations. The work emphasized accuracy, documentation, and least-privilege access. These skills support ethical stewardship of systems and align with principles of accountability and trust.
-Project 2: Technical Support and Troubleshooting
-This project involved diagnosing hardware and network issues using structured troubleshooting methods. The experience reinforced patience, clear communication, and responsibility. Ethical conduct was essential when handling user data and resolving issues efficiently without unnecessary access.
-Project 3: Capstone Portfolio Development
-Developing this portfolio is itself a project that integrates technical presentation with reflection. It demonstrates organization, documentation, and professional communication while showing how faith-based principles guide ethical decision-making in IT work.
-
-Ethical Dilemma Analysis: Misuse of Administrative Privileges
-A common ethical dilemma in system administration involves the misuse of administrative privileges. In this scenario, a system administrator used elevated access to view confidential user information that was unrelated to assigned job responsibilities. Although no data was altered, copied, or shared externally, the access violated organizational policies and breached user trust.
-The individuals involved included the system administrator and the organization responsible for safeguarding sensitive information. Administrative access exists to maintain systems, resolve issues, and ensure availability, not for personal curiosity or convenience. In this case, system logs recorded the unauthorized access, allowing the organization to identify the issue and investigate the activity accurately.
-The initial response involved reviewing access logs, documenting the incident, and revoking unnecessary privileges. Management also reinforced access control policies and reminded staff of ethical responsibilities tied to administrative authority. Additional steps included reviewing internal procedures and emphasizing the principle of least-privilege access to reduce future risk.
-From an ethical perspective, this dilemma demonstrates that technical capability does not justify unrestricted access. Professional responsibility requires restraint, integrity, and respect for privacy at all times. Even when no immediate harm occurs, misuse of access undermines trust and can expose organizations to legal, financial, and reputational consequences. Ethical system administration depends on disciplined decision-making, transparency, and alignment with professional standards and organizational values.
-
-Reflective Activity: Temple-Focused Reflection
-Taking time for focused spiritual reflection provides clarity, peace, and perspective. In a sacred setting such as the temple, or in a quiet space dedicated to reflection, it becomes easier to step away from distractions and evaluate priorities. This type of reflection emphasizes order, purpose, and alignment between beliefs and actions, allowing individuals to reset their focus on what matters most.
-During reflective moments, principles such as accountability, stewardship, and diligence become more apparent. Spiritual clarity supports professional growth by reinforcing the importance of ethical behavior and responsible decision-making. When the mind is calm and focused, it becomes easier to recognize how spiritual commitments influence daily work habits, interactions with others, and long-term goals.
-Elder Bednar’s analogy of intertwined strands illustrates how spiritual, professional, and personal aspects of life are not separate but deeply connected. Growth in one area strengthens the others. Reflection helps identify areas where improvement is needed and encourages consistency between values and actions. It also provides perspective on challenges, helping individuals respond with patience rather than frustration.
-This reflective practice contributes to professional development by encouraging intentional effort rather than reactive behavior. It supports ethical awareness, humility, and self-discipline, qualities essential in IT roles that involve trust, access, and responsibility. By regularly reflecting on spiritual priorities, professional actions become more deliberate, ethical, and aligned with long-term growth and service-oriented goals.
-
-
-
-References
-Bednar, D. A. (2018, October). Gather together in one all things in Christ. General Conference, The Church of Jesus Christ of Latter-day Saints.
-Johnson, C. N. (2021, October). Invite Christ to author your story. General Conference, The Church of Jesus Christ of Latter-day Saints.
-Nelson, R. M. (2021, October). Make time for the Lord. General Conference, The Church of Jesus Christ of Latter-day Saints.
-The Church of Jesus Christ of Latter-day Saints. (2013). The Book of Mormon: Another Testament of Jesus Christ.
-The Church of Jesus Christ of Latter-day Saints. (2013). Doctrine and Covenants.
-</h2>
-  <p>Replace this entire section with your Week 3 content.</p>
+  <h2>References</h2>
+  <ul>
+    <li>Bednar, D. A. (2018, October). <em>Gather together in one all things in Christ</em>. General Conference.</li>
+    <li>Johnson, C. N. (2021, October). <em>Invite Christ to author your story</em>. General Conference.</li>
+    <li>Nelson, R. M. (2021, October). <em>Make time for the Lord</em>. General Conference.</li>
+  </ul>
 </section>
+
 
 <!-- 🔼 PASTE YOUR PORTFOLIO CONTENT ABOVE 🔼 -->
 
