--- a/index.html
+++ b/index.html
@@ -256,6 +256,71 @@
   </section>
 
   <section>
+    <section>
+  <h2>Week 4 Expansion: Agency, Growth, and Integration</h2>
+
+  <h3>Expanded Spiritual Reflection: Agency and Development</h3>
+  <p>
+    Agency plays a central role in spiritual and professional development. Doctrine and Covenants 58:26–28 teaches
+    that individuals are not commanded in all things but are expected to act with initiative and responsibility.
+    Growth occurs when effort is intentional rather than reactive. This principle reinforces the idea that progress
+    requires active engagement and personal accountability.
+  </p>
+  <p>
+    Applying agency requires choosing discipline, consistency, and ethical behavior even when outcomes are not
+    immediate. In both spiritual growth and professional preparation, meaningful progress results from repeated,
+    deliberate decisions aligned with correct principles. Agency strengthens self-reliance while reinforcing
+    responsibility for choices and outcomes.
+  </p>
+
+  <h3>Professional and Spiritual Alignment</h3>
+  <p>
+    Professional competencies in information technology closely align with spiritual guiding principles.
+    Skills such as system administration, troubleshooting, documentation, and access control require trust,
+    accountability, and disciplined decision-making. These professional expectations reflect spiritual principles
+    of stewardship, honesty, and responsibility.
+  </p>
+  <p>
+    Faith-based principles guide ethical behavior in technical environments by reinforcing respect for systems,
+    data, and users. Applying spiritual values to professional tasks encourages thoughtful action, careful judgment,
+    and long-term reliability rather than short-term convenience. This alignment supports consistent growth and
+    ethical integrity in IT roles.
+  </p>
+
+  <h3>Ethical Dilemma Alternative and Ethical Principles</h3>
+  <p>
+    The ethical dilemma involving misuse of administrative privileges highlights the importance of responsibility,
+    restraint, and accountability. Essential ethical principles in this scenario include honesty, least-privilege
+    access, transparency, and respect for privacy.
+  </p>
+  <p>
+    A stronger ethical alternative would involve strict role-based access controls, documented justification for
+    elevated permissions, and regular auditing of administrative activity. Access should be granted only when
+    required for assigned tasks and removed immediately when no longer necessary.
+  </p>
+  <p>
+    This alternative approach better protects users, administrators, and organizations by reducing risk,
+    preserving trust, and reinforcing professional standards. Proactive safeguards prevent misuse before it
+    occurs and promote ethical consistency across technical operations.
+  </p>
+
+  <h3>Project Refinement and Ethical Integration</h3>
+  <p>
+    The selected project for refinement is this IT497 GitHub portfolio. The refinement focused on improving
+    structure, clarity, and ethical integration while presenting both spiritual and professional development
+    in a unified format.
+  </p>
+  <p>
+    Key improvements included clearer organization of content, expanded ethical analysis, and stronger alignment
+    between guiding principles and technical competencies. Ethical considerations such as accountability,
+    stewardship, and appropriate access were intentionally emphasized throughout the portfolio.
+  </p>
+  <p>
+    This refinement demonstrates how thoughtful documentation and ethical reflection enhance the value of
+    technical work. By integrating ethical reasoning into project presentation, the portfolio reflects disciplined
+    decision-making, professional responsibility, and long-term growth in information technology.
+  </p>
+</section>
     <h2>References</h2>
     <ul>
       <li>Bednar, D. A. (2018, October). <em>Gather together in one all things in Christ</em>. General Conference, The Church of Jesus Christ of Latter-day Saints.</li>
