--- a/index.html
+++ b/index.html
@@ -48,14 +48,12 @@
 
 <header>
   <h1>IT 497 Portfolio</h1>
-  <p>Guiding Principles and Initial Content Development</p>
+  <p>IT 497 Portfolio</p>
 </header>
 
 <main>
 
   <section>
-    <h2>Guiding Principles and Initial Content Development</h2>
-
     <h2>Spiritual Progression Portfolio</h2>
 
     <h3>Guiding Principles</h3>
