--- a/index.html
+++ b/index.html
@@ -317,6 +317,72 @@
     technical work. By integrating ethical reasoning into project presentation, the portfolio reflects disciplined
     decision-making, professional responsibility, and long-term growth in information technology.
   </p>
+    <section>
+  <h2>Week 5 Reflection: Christlike Attributes and Personal Warning Signs</h2>
+  <p>
+    As I continue developing spiritually and professionally, I have become more aware of the Christlike attributes
+    that guide my behavior and decision-making. Attributes such as patience, humility, honesty, and integrity are
+    essential not only in discipleship but also in information technology roles that involve trust, access, and responsibility.
+    Practicing patience helps me remain calm when troubleshooting complex issues, while humility reminds me to ask for help,
+    accept feedback, and continue learning rather than relying solely on my own understanding.
+  </p>
+  <p>
+    Through reflection, I have also identified personal warning signs that indicate when I may be drifting away from
+    these principles. These warning signs include rushing through tasks, becoming frustrated under pressure, or prioritizing
+    speed over accuracy. When I recognize these signs, I intentionally pause, review my priorities, and realign my actions
+    with both professional standards and spiritual values. Prayer, reflection, and deliberate slowing down help me restore
+    focus, accountability, and ethical clarity.
+  </p>
+</section>
+
+<section>
+  <h2>Week 5 Design Review: Usability Testing and Enhancements</h2>
+  <p>
+    To improve the usability and design of my portfolio, I conducted informal usability testing by reviewing the site
+    from the perspective of a first-time visitor. I evaluated readability, organization, navigation flow, and overall clarity
+    across both desktop and mobile views. I focused on whether content sections were clearly labeled, logically ordered,
+    and easy to scan without overwhelming the reader.
+  </p>
+  <p>
+    Based on this review, I enhanced the portfolio by improving heading structure, spacing, and section separation
+    to make the content easier to follow. I ensured consistent formatting across sections and refined layout spacing
+    to reduce visual clutter. These improvements increased accessibility, readability, and professionalism while preserving
+    a clean and distraction-free design.
+  </p>
+</section>
+
+<section>
+  <h2>Week 5 Ethical Reflection: Applying Ethics in My Future Career</h2>
+  <p>
+    Reflecting further on the ethical dilemma involving misuse of administrative privileges helped me understand how
+    easily trust can be compromised when ethical boundaries are ignored. In my future career in information technology,
+    I intend to approach similar situations with a firm commitment to integrity, transparency, and least-privilege access.
+    Even when access is technically possible, ethical responsibility requires restraint and respect for privacy.
+  </p>
+  <p>
+    This exercise reinforced the importance of proactive ethical behavior rather than reactive correction. By implementing
+    safeguards such as role-based access controls, documentation, and regular audits, ethical risks can be reduced before
+    harm occurs. Engaging with this dilemma strengthened my awareness that ethical challenges are ongoing responsibilities
+    in IT roles.
+  </p>
+</section>
+
+<section>
+  <h2>Week 5 Integration Reflection: Faith and Professional Practice</h2>
+  <p>
+    Participating in reflective activities helped me better understand how my faith and professional development
+    are deeply interconnected. Spiritual reflection provides clarity, perspective, and peace, allowing me to evaluate
+    not only what I do but why I do it. This process reinforces principles such as stewardship, accountability, and diligence,
+    which directly influence how I approach technical responsibilities.
+  </p>
+  <p>
+    Integrating faith with professional practice has helped me view technical work as a form of service rather than
+    simple task completion. Ethical decision-making, careful documentation, and responsible system management become
+    expressions of integrity and respect for others. This integration encourages consistency between beliefs and actions
+    and supports long-term growth.
+  </p>
+</section>
+
 </section>
     <h2>References</h2>
     <ul>
