--- a/index.html
+++ b/index.html
@@ -382,6 +382,79 @@
     and supports long-term growth.
   </p>
 </section>
+<section>
+  <h2>Week 6 Action Plan: Ongoing Spiritual and Professional Development</h2>
+
+  <h3>Spiritual Development Goals</h3>
+
+  <h4>Goal 1: Strengthen Daily Spiritual Discipline</h4>
+  <ul>
+    <li>Maintain daily scripture study and prayer.</li>
+    <li>Attend the temple regularly when possible.</li>
+    <li>Record weekly reflections to track growth and alignment with guiding principles.</li>
+  </ul>
+
+  <h4>Goal 2: Develop Christlike Attributes in High-Pressure Situations</h4>
+  <ul>
+    <li>Practice patience during technical troubleshooting.</li>
+    <li>Respond to conflict calmly and respectfully.</li>
+    <li>Pause before reacting when under stress.</li>
+  </ul>
+
+  <h4>Goal 3: Increase Accountability and Self-Evaluation</h4>
+  <ul>
+    <li>Conduct monthly self-reviews of spiritual habits.</li>
+    <li>Identify personal warning signs early (frustration, rushing, distraction).</li>
+    <li>Realign through prayer, reflection, and deliberate correction.</li>
+  </ul>
+
+  <h3>Professional Development Goals</h3>
+
+  <h4>Goal 1: Advance Technical Competency</h4>
+  <ul>
+    <li>Strengthen system administration and network security knowledge.</li>
+    <li>Earn additional certifications related to cybersecurity or cloud infrastructure.</li>
+    <li>Build and document lab projects to demonstrate applied skills.</li>
+  </ul>
+
+  <h4>Goal 2: Strengthen Ethical Leadership in IT</h4>
+  <ul>
+    <li>Apply least-privilege principles consistently.</li>
+    <li>Study professional IT ethics standards.</li>
+    <li>Maintain disciplined documentation practices in all projects.</li>
+  </ul>
+
+  <h4>Goal 3: Develop Career Readiness</h4>
+  <ul>
+    <li>Refine résumé and LinkedIn profile quarterly.</li>
+    <li>Continue building GitHub portfolio projects.</li>
+    <li>Seek internships or entry-level IT positions aligned with system administration.</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Week 6 Final Reflection: Alignment and Growth</h2>
+
+  <p>
+    Throughout this course, my understanding of the relationship between spiritual growth and professional development has deepened significantly. At the beginning of the course, I viewed spiritual progression and career preparation as parallel paths. Over time, I have come to understand that they are intertwined strands that strengthen one another.
+  </p>
+
+  <p>
+    My guiding principles—faith, humility, and agency—have shaped how I approach both discipleship and technical growth. Faith has helped me remain steady when progress feels slow. Humility has allowed me to accept feedback and learn from mistakes. Agency has reminded me that growth requires active effort rather than passive intention.
+  </p>
+
+  <p>
+    As I refined my portfolio, I recognized that technical competence alone is not sufficient in information technology roles. Trust, accountability, and ethical restraint are essential. The ethical dilemma involving misuse of administrative privileges reinforced how easily trust can be compromised when principles are ignored. This reflection has strengthened my commitment to disciplined access control and responsible system stewardship.
+  </p>
+
+  <p>
+    My goals have evolved from simply completing coursework to becoming a capable and trusted IT professional whose actions reflect integrity. I now see professional preparation as a form of service. Ethical documentation, secure system management, and careful troubleshooting are not just technical tasks—they are responsibilities tied to real people and real consequences.
+  </p>
+
+  <p>
+    This portfolio represents both where I have been and where I am headed. Moving forward, I am committed to continuous spiritual refinement and technical excellence. I aim to grow as a disciplined disciple of Jesus Christ and as a trustworthy technology professional whose decisions are guided by principle rather than convenience.
+  </p>
+</section>
 
 </section>
     <h2>References</h2>
