--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
   </p>
 
   <p>
-    My guiding principles—faith, humility, and agency—have shaped how I approach both discipleship and technical growth. Faith has helped me remain steady when progress feels slow. Humility has allowed me to accept feedback and learn from mistakes. Agency has reminded me that growth requires active effort rather than passive intention.
+    My guiding principles (faith, humility, and agency) have shaped how I approach both discipleship and technical growth. Faith has helped me remain steady when progress feels slow. Humility has allowed me to accept feedback and learn from mistakes. Agency has reminded me that growth requires active effort rather than passive intention.
   </p>
 
   <p>
@@ -448,7 +448,7 @@
   </p>
 
   <p>
-    My goals have evolved from simply completing coursework to becoming a capable and trusted IT professional whose actions reflect integrity. I now see professional preparation as a form of service. Ethical documentation, secure system management, and careful troubleshooting are not just technical tasks—they are responsibilities tied to real people and real consequences.
+    My goals have evolved from simply completing coursework to becoming a capable and trusted IT professional whose actions reflect integrity. I now see professional preparation as a form of service. Ethical documentation, secure system management, and careful troubleshooting are not just technical tasks, they are responsibilities tied to real people and real consequences.
   </p>
 
   <p>
