--- a/index.html
+++ b/index.html
@@ -455,6 +455,40 @@
     This portfolio represents both where I have been and where I am headed. Moving forward, I am committed to continuous spiritual refinement and technical excellence. I aim to grow as a disciplined disciple of Jesus Christ and as a trustworthy technology professional whose decisions are guided by principle rather than convenience.
   </p>
 </section>
+<section>
+  <h2>Week 6 Peer Review Report</h2>
+
+  <p>
+    During Week 6, I completed two peer reviews for classmates’ Spiritual Progression and Professional Growth Portfolios.
+    Providing feedback helped me evaluate not only their work but also my own growth and presentation clarity.
+  </p>
+
+  <h3>Peer Review 1 – Ian Ndhlovu</h3>
+  <p>
+    In reviewing Ian’s portfolio, I highlighted the strength of his clear structure and thoughtful integration of spiritual principles.
+    I suggested expanding reflective insights to further demonstrate personal transformation and encouraged adding more specific professional examples
+    to strengthen impact. This review reinforced for me the importance of clarity, depth, and practical application in a portfolio.
+  </p>
+
+  <h3>Peer Review 2 – Lamidi Olatunji Micheal Eleshin</h3>
+  <p>
+    In Lamidi’s portfolio, I noted his clear alignment between faith and professional ambition. I suggested refining transitions between sections
+    and strengthening the reflective voice to enhance cohesion. Providing this feedback helped me reflect on how structure and narrative flow
+    influence readability and impact.
+  </p>
+
+  <h3>Feedback I Received and Implementation</h3>
+  <p>
+    I received feedback suggesting that I add stronger reflective summaries at the end of major sections and improve visual consistency.
+    In response, I expanded my Week 6 Final Reflection to clearly summarize my growth and future direction. I also refined formatting,
+    spacing, and section clarity to improve usability and navigation throughout the portfolio.
+  </p>
+
+  <p>
+    This peer review process strengthened my ability to evaluate work constructively and reinforced the importance of intentional design,
+    clarity, and authentic reflection.
+  </p>
+</section>
 
 </section>
     <h2>References</h2>
